--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -2,9 +2,9 @@ name: "Build and push images"
 
 on:
   workflow_dispatch:
-  push:
-    branches:
-      - main
+#  push:
+#    branches:
+#      - main
   schedule:
     - cron: 0 16 * * *
 
