Update fetch official version method.

--- a/.github/workflows/renew-app.yml
+++ b/.github/workflows/renew-app.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Check and fetch app
         run: |
           [ -e app/README.md ] && NOW=$(awk '/Repo/{print $NF}' app/README.md)
-          LATEST=$(sudo wget -qO- https://raw.githubusercontent.com/naiba/nezha/master/README.md | grep -oP '(?<=master&label=Dash%20)[^&]*')
+          LATEST=$(sudo wget -qO- wget -qO- https://raw.githubusercontent.com/naiba/nezha/master/service/singleton/singleton.go | awk -F '"' '/var Version/{print $2}')
           if [ "$NOW" != "$LATEST" ]; then
             ARCH=("x86_64" "aarch64")
             PLATFORM=("amd64" "arm64")
