--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -2,14 +2,8 @@ name: "Build and push images"
 
 on:
   workflow_dispatch:
-#  push:
-#    branches:
-#      - main
-  workflow_run:
-    workflows: ["Renew nezha dash app"]
-    branches: [main]
-    types:
-      - completed
+  schedule:
+    - cron: 0 16 * * *
 
 jobs:
   Building:
@@ -22,41 +16,45 @@ jobs:
 
       steps:
       - name: Checkout code
-        uses: actions/checkout@v4.0.0
+        uses: actions/checkout@v4.1.1
         with:
           fetch-depth: 0
 
       - name: Check the latest verion
         run: |
-          [ -e app/README.md ] && NOW=$(awk '/Images/{print $NF}' app/README.md)
-          LATEST=$(awk '/Repo/{print $NF}' app/README.md )
-          [ "$NOW" != "$LATEST" ] && sed -i "/Images/s/\(.*[ ]\)v.*/\1$LATEST/" app/README.md && echo "VERSION=$LATEST" >> $GITHUB_ENV || true
+          [ -e README_EN.md ] && NOW=$(awk '/^The latest version/{print $NF}' README_EN.md)
+          LATEST=$(wget -qO- "https://api.github.com/repos/naiba/nezha/releases/latest" | awk -F '"' '/"tag_name"/{print $4}')
+          if [ "$NOW" != "$LATEST" ]; then
+            sed -i "s/\(^The latest version:[ ]\+\)v.*/\1$LATEST/" README_EN.md
+            sed -i "s/\(^当前镜像版本:[ ]\+\)v.*/\1$LATEST/" README.md
+            echo "VERSION=$LATEST" >> $GITHUB_ENV
+          fi
 
       - name: Set up QEMU
-        if: ${{ env.VERSION != '' || github.event_name == 'workflow_dispatch' || github.event_name == 'push' }}
-        uses: docker/setup-qemu-action@v2.2.0
+        if: ${{ env.VERSION != '' || github.event_name == 'workflow_dispatch' }}
+        uses: docker/setup-qemu-action@v3.0.0
 
       - name: Set up Docker Buildx
-        if: ${{ env.VERSION != '' || github.event_name == 'workflow_dispatch' || github.event_name == 'push' }}
-        uses: docker/setup-buildx-action@v2.10.0
+        if: ${{ env.VERSION != '' || github.event_name == 'workflow_dispatch' }}
+        uses: docker/setup-buildx-action@v3.0.0
 
       - name: Login to DockerHub
-        if: ${{ env.VERSION != '' || github.event_name == 'workflow_dispatch' || github.event_name == 'push' }}
-        uses: docker/login-action@v2.2.0
+        if: ${{ env.VERSION != '' || github.event_name == 'workflow_dispatch' }}
+        uses: docker/login-action@v3.0.0
         with:
           username: ${{ env.DOCKER_USERNAME }}
           password: ${{ env.DOCKER_PASSWORD }}
 
       - name: Push images to Docker hub
-        if: ${{ env.VERSION != '' || github.event_name == 'workflow_dispatch' || github.event_name == 'push' }}
-        uses: docker/build-push-action@v4.1.1
+        if: ${{ env.VERSION != '' || github.event_name == 'workflow_dispatch' }}
+        uses: docker/build-push-action@v5.1.0
         with:
           push: true
           platforms: linux/amd64,linux/arm64
           tags: ${{ env.DOCKERHUB_REPOSITORY }}
 
       - name: Upload to repository
-        uses: stefanzweifel/git-auto-commit-action@v4.16.0
-        if: ${{ env.VERSION != '' || github.event_name == 'workflow_dispatch' || github.event_name == 'push' }}
+        uses: stefanzweifel/git-auto-commit-action@v5.0.0
+        if: ${{ env.VERSION != '' || github.event_name == 'workflow_dispatch' }}
         with:
           commit_message: Push images ${{ env.VERSION }} by Github Actions, ${{ env.DATE }}
