--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -50,7 +50,7 @@ jobs:
         uses: docker/build-push-action@v5.1.0
         with:
           push: true
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64,linux/arm64,linux/arm/v7
           tags: ${{ env.DOCKERHUB_REPOSITORY }}
 
       - name: Upload to repository
