Update build grpcwebproxy workflows.

--- a/.github/workflows/grpcwebproxy.yml
+++ b/.github/workflows/grpcwebproxy.yml
@@ -1,44 +1,58 @@
 name: Cross compile grpcwebproxy
 
 on:
+  push:
+    tags:
+      - 'grpcwebproxy*'
   workflow_dispatch:
+#  push:
+#    branches:
+#      - main
 
 jobs:
-  grpcwebproxy:
-
-    name: Cross compile grpcwebproxy
-
-    runs-on: ubuntu-20.04
-
+  releases-matrix:
+    name: Release Go Binary
+    runs-on: ubuntu-latest
     env:
-      workdir: ./grpcwebproxy-source
+      CGO_ENABLED: 0
+      BINARY: grpcwebproxy
+
+    strategy:
+      matrix:
+        goos: [linux]
+        goarch: ["386", amd64, arm64, arm, s390x, riscv64]
+#       exclude:
+#         - goarch: "386"
+#           goos: darwin
+#         - goarch: arm64
+#           goos: windows
 
     steps:
-      - name: Checkout code
+      - name: Git clone repository
         uses: actions/checkout@v4.1.1
         with:
+          repository: improbable-eng/grpc-web
           fetch-depth: 1
 
-      - name: Git clone grpcwebproxy
-        run: |
-          git clone https://github.com/improbable-eng/grpc-web.git ${{ env.workdir }}
-          cp ./.github/grpcwebproxy-releaser.yml ${{ env.workdir }}/.goreleaser.yml
+      - uses: wangyoucao577/go-release-action@v1.41
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          goos: ${{ matrix.goos }}
+          goarch: ${{ matrix.goarch }}
+          goversion: "1.21.5"
+          project_path: "go/${{ env.BINARY }}"
+          ldflags: -s -w --extldflags '-static -fpic'
+          md5sum: "FALSE"
+          release_tag: "${{ env.BINARY }}"
+          release_name: "${{ env.BINARY }}"
+          binary_name: "${{ env.BINARY }}"
+          compress_assets: "AUTO"
+          asset_name: "${{ env.BINARY }}-${{ matrix.goos }}-${{ matrix.goarch }}"
 
-      - name: Set up GoReleaser
-        uses: actions/setup-go@v4.1.0
+      - name: Delete old workflow runs
+        uses: MajorScruffy/delete-old-workflow-runs@v0.3.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          go-version: "1.21"
-
-      - name: Run GoReleaser
-        uses: goreleaser/goreleaser-action@v5.0.0
-        with:
-          distribution: goreleaser
-          workdir: ${{ env.workdir }}
-          version: latest
-          args: release --rm-dist --snapshot
-            
-      - name: Release binaries 
-        uses: softprops/action-gh-release@v0.1.15
-        with:
-          tag_name: grpcwebproxy
-          files: ${{ env.workdir }}/dist/*.tar.gz
+          repository: ${{ github.repository }}
+          older-than-seconds: 3600
